# easy_switch

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs
tests/: tests.rs
tests/expand/: empty_case.expanded.rs  empty_case.rs  empty_case_with_n_cases.expanded.rs  empty_case_with_n_cases.rs  n_cases.expanded.rs  n_cases.rs  simple.expanded.rs  simple.rs  two_cases.expanded.rs  two_cases.rs
